--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.SplashActivity"
+        <activity android:name=".view.ResultActivity"></activity>
+        <activity android:name=".view.DataEntryActivity" />
+        <activity android:name=".view.DetailsActivity" />
+        <activity android:name=".view.FetchActivity" />
+        <activity
+            android:name=".view.SplashActivity"
             android:theme="@style/splashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,9 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".view.LoginActivity">
-
-        </activity>
+        <activity android:name=".view.LoginActivity" />
     </application>
 
 </manifest>
