--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.ResultActivity"></activity>
+        <activity android:name=".view.ResultActivity"
+            android:screenOrientation="portrait"></activity>
         <activity android:name=".view.DataEntryActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|adjustResize"/>
-        <activity android:name=".view.DetailsActivity" />
+        <activity android:name=".view.DetailsActivity"
+            android:screenOrientation="portrait"/>
         <activity android:name=".view.FetchActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|adjustPan"/>
         <activity
             android:name=".view.SplashActivity"
-            android:theme="@style/splashScreenTheme">
+            android:theme="@style/splashScreenTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,6 +31,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".view.LoginActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|adjustPan"/>
     </application>
 
