--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan|adjustResize"/>
         <activity android:name=".view.DetailsActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:banner="@color/darkGreen"/>
         <activity android:name=".view.FetchActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize|adjustPan"/>
